# polymarket-mcp-server

./: .env.example  .gitignore  AGENT_INTEGRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  COOLIFY_N8N_GUIDE.md  Dockerfile.coolify  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_INSTALADO.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_VISUAL_SUMMARY.txt  PHASE_4_COMPLETION.md  PORTFOLIO_IMPLEMENTATION_SUMMARY.md  PORTFOLIO_INTEGRATION.md  README.md  SETUP_GUIDE.md  TEST_EXAMPLES.py  TOOLS_REFERENCE.md  TRADING_ARCHITECTURE.md  TRADING_IMPLEMENTATION_SUMMARY.md  USAGE_EXAMPLES.py  WEBSOCKET_INTEGRATION.md  WEBSOCKET_QUICK_REFERENCE.md  analyze_top_markets.py  demo_mcp_tools.py  docker-compose.coolify.yml  open_config.sh  pyproject.toml  run_trading_tests.py  shutdown_deep_analysis.py  shutdown_ultra_analysis.py  test_mcp_connection.py  test_real_data.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/polymarket_mcp/: __init__.py  config.py  server.py
src/polymarket_mcp/auth/: __init__.py  client.py  signer.py
src/polymarket_mcp/resources/: __init__.py
src/polymarket_mcp/tools/: __init__.py  market_analysis.py  market_discovery.py  portfolio.py  portfolio_integration.py  realtime.py  trading.py
src/polymarket_mcp/utils/: __init__.py  rate_limiter.py  safety_limits.py  websocket_manager.py
tests/: __init__.py  test_market_tools.py  test_portfolio_tools.py  test_trading_tools.py  test_websocket.py
